2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Move noinst_LIBRARIES = libbsp.a before its
	components.

2008-09-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Cleanup ../../shared/include/bootcard.h handling.

2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Make letting boot_card() handle work area allocation
	mandatory. Rename RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION to
	BSP_BOOTCARD_OPTIONS.

2008-09-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Remove unnecessary boilerplate comments.

2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, startup/linkcmds: Use top level shared
	bsp_get_work_area() implementation.

2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, clock/ckinit.c, startup/bspstart.c: Add
	use of bsp_get_work_area() in its own file and rely on BSP Framework
	to perform more initialization. Remove unnecessary includes of
	rtems/libio.h and rtems/libcsupport.h.

2008-09-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Review of all bsp_cleanup() implementations. In this
	phase, all prototypes were removed from bsp.h and empty
	implementations were removed and made to use the shared stub.

2008-09-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clock/ckinit.c: The Shared Memory Driver no longer requires the
	special IOCTL in Clock_control. This was a hack which has existed
	since before the Classic API Timer Manager was implemented. All
	implementations of and references to Clock_control were removed.

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.c, fatal/bspfatal.c, include/fatal.h,
	timer/timer.c: Convert to "bool".