@@ -1,3 +1,9 @@
+2008-10-15	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	PR 1303/bsps
+	* fatal/bspfatal.c: strcat() is safe to use even in worst case, so do
+	not have BSP specific mystrcat().
+
 2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
